[package]
name = "gringotts"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1

[dependencies]
solana-client = { version = "2.0", default-features = false }
solana-sdk = { version = "2.0", default-features = false }
solana-account-decoder-client-types = { version = "2.0", default-features = false }
spl-token = { version = "6.0", default-features = false, features = ["no-entrypoint"] }
mpl-token-metadata = { version = "5.0", default-features = false }
clap = { version = "4.5", features = ["derive", "std"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "time"] }
anyhow = "1.0"
dirs = "5.0"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
once_cell = "1.19"
